@@ -1,0 +1,248 @@
+<?php
+/*
+ * $Header: /cvsroot/nocc/nocc/webmail/lang/en.php,v 1.86 2006/06/23 12:43:31 goddess_skuld Exp $
+ *
+ * Copyright 2001 Nicolas Chalanset <nicocha@free.fr>
+ * Copyright 2001 Olivier Cahagne <cahagn_o@epita.fr>
+ *
+ * See the enclosed file COPYING for license information (GPL).  If you
+ * did not receive this file, see http://www.fsf.org/copyleft/gpl.html.
+ *
+ * Configuration file for the welsh language
+ * Translation by Sion Pennant <sion.pennant@powys.gov.uk>
+ *
+ */
+
+$charset = 'UTF-8';
+
+// Configuration for the days and months
+
+// What language to use (Here, english US --> en_US)
+// see '/usr/share/locale/' for more information
+$lang_locale = 'cy_GB.UTF-8';
+
+// Text Alignment
+// Can be right-to-left (rtl) which is needed for proper Arabic, Hebrew
+// Or left-to-right (ltr) which is default for most languages
+$lang_dir = 'ltr';
+
+// What format string should we pass to strftime() for messages sent on
+// days other than today?
+$default_date_format = '%Y-%m-%d';
+
+// If the local is not implemented on the host, how we display the date
+$no_locale_date_format = '%Y-%m-%d';
+
+// What format string should we pass to strftime() for messages sent
+// today?
+$default_time_format = '%I:%M %p';
+
+
+// Here is the configuration for the HTML
+
+$err_user_empty = 'Mae\'r blwch mewngofnodi\'n wag';
+$err_passwd_empty = 'Mae\'r blwch cyfrinair yn wag';
+
+
+// html message
+
+$alt_delete = 'Dileu\'r negeseuon sydd wedi eu dewis';
+$alt_delete_one = 'Dileu\'r neges';
+$alt_new_msg = 'Negeseuon newydd';
+$alt_reply = 'Ymateb i\'r awdur';
+$alt_reply_all = 'Ymateb i bawb';
+$alt_forward = 'Gyrru ymlaen';
+$alt_next = 'Nesaf';
+$alt_prev = 'Blaenorol';
+$title_next_page = 'Tudalen nesaf';
+$title_prev_page = 'Tudalen flaenorol';
+$title_next_msg = 'Neges nesaf';
+$title_prev_msg = 'Neges flaenorol';
+$html_on = 'ar';
+$html_theme = 'Thema';
+
+// index.php
+
+$html_lang = 'Iaith';
+$html_welcome = 'Croeso i';
+$html_login = 'Mewngofnodi';
+$html_passwd = 'Cyfrinair';
+$html_submit = 'Gyrru';
+$html_help = 'Cymorth';
+$html_server = 'Gweinydd';
+$html_wrong = 'Mae eich enw mewngofnodi neu eich cyfrinair yn anghywir';
+$html_retry = 'Ailgeisio';
+$html_remember = "Cofio dewisiadau";
+
+// prefs.php
+
+$html_msgperpage = 'Nifer o negeseuon y dudalen';
+$html_preferences = 'Dewisiadau';
+$html_full_name = 'Enw llawn';
+$html_email_address = 'Cyfeiriad E-bost';
+$html_ccself = 'Cc hunan';
+$html_hide_addresses = 'Cuddio cyfeiriadau';
+$html_outlook_quoting = 'Dyfynodau tebyg i \'Outlook\'';
+$html_reply_to = 'Ymateb i';
+$html_use_signature = 'Defnyddio llofnod';
+$html_signature = 'Llofnod';
+$html_reply_leadin = 'Arddodiad ymateb';
+$html_prefs_updated = 'Diweddarwyd dewisiadau';
+$html_manage_folders_link = 'Gweinyddu ffolderi IMAP';
+$html_manage_filters_link = 'Gweinyddu Hidlau E-bost';
+$html_use_graphical_smilies = 'Defnyddio wynebau graffigol';
+$html_sent_folder = 'Copïo negeseuon anfonedig i ffolder bwrpasol';
+$html_colored_quotes = 'Dyfynodau lliw';
+$html_display_struct = 'Dangos testun strwythuredig';
+$html_send_html_mail = 'Gyrru negeseuon mewn fformat HTML';
+
+// folders.php
+$html_folders_create_failed = 'Methu creu ffolder!';
+$html_folders_sub_failed = 'Methu tanysgrifo i\'r ffolder!';
+$html_folders_unsub_failed = 'Methu dad-danysgrifo o\'r ffolder!';
+$html_folders_rename_failed = 'Methu ailenwi ffolder!';
+$html_folders_updated = 'Diweddarwyd ffolderi';
+$html_folder_subscribe = 'Tanysgrifio i';
+$html_folder_rename = 'Ailenwi';
+$html_folder_create = 'Creu ffolder newydd o\'r enw';
+$html_folder_remove = 'Dad-danysgrifio o';
+$html_folder_delete = 'Dileu';
+$html_folder_to = 'i';
+
+// filters.php
+$html_filter_remove = 'Dileu';
+$html_filter_body = 'Corff neges';
+$html_filter_subject = 'Pwnc';
+$html_filter_to = 'Maes I';
+$html_filter_cc = 'Maes Cc';
+$html_filter_from = 'Maes Oddiwrth';
+$html_filter_change_tip = 'I newid hidlen, tros-ysgrifennwch.';
+$html_reapply_filters = 'Ail-osod pob hidlen';
+$html_filter_contains = 'yn cynnwys';
+$html_filter_name = 'Enw\'r Hidlen';
+$html_filter_action = 'Gweithrediadau Hidlo';
+$html_filter_moveto = 'Symud i';
+
+// Other pages
+$html_select_one = '-- Dewiswch un --';
+$html_and = 'A';
+$html_new_msg_in = 'Neges newydd yn';
+$html_or = 'neu';
+$html_move = 'Symud';
+$html_copy = 'Copïo';
+$html_messages_to = 'negeseuon dewisedig i';
+$html_gotopage = 'Mynd i Dudalen';
+$html_gotofolder = 'Mynd i Ffolder';
+$html_other_folders = 'Rhestr Ffolderi';
+$html_page = 'Tudalen';
+$html_of = 'o';
+$html_view_header = 'Gweld pennyn';
+$html_remove_header = 'Cuddio pennyn';
+$html_inbox = 'Blwch Derbyn';
+$html_new_msg = 'Ysgrifennu';
+$html_reply = 'Ymateb';
+$html_reply_short = 'Re';
+$html_reply_all = 'Ymateb i bawb';
+$html_forward = 'Gyrru Ymlaen';
+$html_forward_short = 'Fw';
+$html_forward_info = 'Bydd y neges rydych yn ei gyrru ymlaen yn cael ei gyrru fel atodiad i\'r neges yma..';
+$html_delete = 'Dileu';
+$html_new = 'Newydd';
+$html_mark = 'Dileu';
+$html_att = 'Atodiadau';
+$html_atts = 'Atodiadau';
+$html_att_unknown = '[anhysbys]';
+$html_attach = 'Atodi';
+$html_attach_forget = 'Rhaid i chi atodi\'r ffeil cyn anfon y neges!';
+$html_attach_delete = 'Tynnu\'r dewisedig ymaith';
+$html_attach_none = 'Dewiswch ffeil i\'w hatodi!';
+$html_sort_by = 'Trefnu wrth';
+$html_sort = 'Trefnu';
+$html_from = 'Oddiwrth';
+$html_subject = 'Pwnc';
+$html_date = 'Dyddiad';
+$html_sent = 'Gyrru';
+$html_wrote = 'ysgrifennwyd';
+$html_size = 'Maint';
+$html_totalsize = 'Cyfanswm maint';
+$html_kb = 'kb';
+$html_bytes = 'beit';
+$html_filename = 'Enw ffeil';
+$html_to = 'I';
+$html_cc = 'Cc';
+$html_bcc = 'Bcc';
+$html_nosubject = 'Di-bwnc';
+$html_send = 'Gyrru';
+$html_cancel = 'Canslo';
+$html_no_mail = 'Dim negeseuon.';
+$html_logout = 'Allgofnodi';
+$html_msg = 'Neges';
+$html_msgs = 'Negeseuon';
+$html_configuration = 'Nid yw\'r gweinydd yma wedi cael ei osod i fyny\'n iawn!';
+$html_priority = 'Blaenoriaeth';
+$html_low = 'Isel';
+$html_normal = 'Normal';
+$html_high = 'Uchel';
+$html_receipt = 'Gwneud cais am dderbynneb';
+$html_select = 'Dewiswch';
+$html_select_all = 'Gwrthdroi dewisiadau';
+$html_loading_image = 'Llwytho delwedd';
+$html_send_confirmed = 'Derbyniwyd eich neges ar gyfer cludiant';
+$html_no_sendaction = 'Dim gweithredoedd wedi eu pennu. Gwiriwch fod JavaScript wedi cael ei alluogi yn eich porwr.';
+$html_error_occurred = 'Gwall';
+$html_prefs_file_error = 'Methu agor y ffeil ddewisiadau ar gyfer ysgrifennu.';
+$html_wrap = 'Amlapio testun negeseuon sy\'n cael eu gyrru allan i:';
+$html_wrap_none = 'Dim';
+$html_usenet_separator = 'Gwahanydd Usenet ("-- \n") cyn y llofnod';
+$html_mark_as = 'Marcio fel';
+$html_read = 'wedi ei darllen';
+$html_unread = 'heb ei darllen';
+$html_encoding = 'Amgodio nodau';
+
+// Contacts manager
+$html_add = 'Adio';
+$html_contacts = 'Cysylltiadau';
+$html_modify = 'Addasu';
+$html_back = 'Yn ôl';
+$html_contact_add = 'Adio cyswllt newydd';
+$html_contact_mod = 'Addasu cyswllt';
+$html_contact_first = 'Enw cyntaf';
+$html_contact_last = 'Cyfenw';
+$html_contact_nick = 'Llysenw';
+$html_contact_mail = 'Cyfeiriad E-bost';
+$html_contact_list = 'Rhestr cyswllt o ';
+$html_contact_del = 'o\'r rhestr gysylltiadau';
+
+$html_contact_err1 = 'Uchafswm nifer o gysylltiadau yw ';
+$html_contact_err2 = 'Fedrwch chi ddim adio cyswllt newydd';
+$html_contact_err3 = 'Nid oes gennych hawliau i\'r rhestr gysylltiadau';
+$html_del_msg = 'Dileu\'r negeseuon dewisedig?';
+$html_down_mail = 'Islwytho';
+
+$original_msg = '-- Neges Wreiddiol --';
+$to_empty = 'Rhaid i chi lenwi\'r maes \'I\'!';
+
+// Images warning
+$html_images_warning = 'Er mwyn eich diogelwch, nid yw delweddau pell yn cael eu harddangos.';
+$html_images_display = 'Dangos delweddau';
+
+// SMTP problems (class_smtp.php)
+$html_smtp_error_no_conn = 'Methu agor cyswllt SMTP';
+$html_smtp_error_unexpected = 'Ymateb SMTP annisgwyledig:';
+
+// IMAP messages (class_local.php)
+$lang_could_not_connect = 'Methu cysylltu â\'r gweinydd';
+$lang_invalid_msg_num = 'Gwall gyda rhif y neges';
+
+$html_file_upload_attack = 'Ymosodiad uwchlwytho ffeil posibl';
+$html_invalid_email_address = 'Cyfeiriad e-bost annilys';
+$html_invalid_msg_per_page = 'Nifer annilys o negeseuon y dudalen';
+$html_invalid_wrap_msg = 'Lled amlapio neges annilys';
+$html_seperate_msg_win = 'Negeseuon mewn ffenestr arall';
+
+// Exceptions
+$html_err_file_contacts = 'Methu agor ffeil cysylltiadau ar gyfer ysgrifennu.';
+$html_session_file_error = 'Methu agor ffeil sesiynau ar gyfer ysgrifennu.';
+$html_login_not_allowed = 'Nid yw\'r mewngofnodiad yma\'n ddilys ar gyfer y cyswllt hwn.';
+?>
+
