@@ -1,6 +1,7 @@
 NOCC 1.5  ?? ??, ??
 
   Misc
+    * Welsh translation added (Sion Pennant).
     * Fix issues with server self provided details on login page
       (Arnaud Boudou).
 
